--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,6 +9,9 @@ jobs:
       - run:
           name: Update npm
           command: 'sudo npm install -g npm@latest'
+      - run:
+          name: echo npm version
+          command: 'npm -v'
       - restore_cache:
           key: dependency-cache-{{ checksum "package.json" }}
       - run:
