--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,19 +2,29 @@ version: 2
 jobs:
   build:
     docker:
-      - image: circleci/node:7.10
-    working_directory: ~/repo
+      - image: circleci/node:11.15
     steps:
+      - restore_cache:
+          keys:
+            - source-v1-{{ .Branch }}-{{ .Revision }}
+            - source-v1-{{ .Branch }}-
+            - source-v1-
       - checkout
+      - save_cache:
+          key: source-v1-{{ .Branch }}-{{ .Revision }}
+          paths:
+            - .git
+      - restore_cache:
+          key: v1-npm-deps-{{ checksum "package.json" }}
+      - run: npm install
+      - save_cache:
+          key: v1-npm-deps-{{ checksum "package.json" }}
+          paths:
+            - node_modules
       - run:
-          name: echo npm version
-          command: npm -v
-      - run:
-          name: Install npm
-          command: npm install
-      - run:
-          name: check test1.js lint
-          command: npm run lint1
-      - run:
-          name: check test2.js lint
-          command: npm run lint2
+          name: lint
+          command: |
+            mkdir -p /tmp/test-reports/eslint
+            node_modules/.bin/eslint . --format junit --output-file /tmp/test-reports/eslint/results.xml
+      - store_test_results:
+          path: /tmp/test-reports
